# JaxDLM

./: .gitignore  pyproject.toml
jaxdlm/: TimeFrame.py  dlm.py  test.py
jaxdlm/utils/: observation_vector_utils.py  state_matrix_utils.py
tests/: test_DynamicLinearModel.py  test_TSDateTime.py
