
[project]
name = "jaxdlm"
version = "0.0.3"
description = "A python package for Dynamic Linear Models using Jax"
authors = [
    {name = "Michael Ellis", email = "michael@mlellis.com"},
]
dependencies = [
    "jax>=0.4.10",
    "pandas>=2.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.3.1",
]
